[tool.poetry]
name = "1"
version = "1"
description = "DZ_DRF"
authors = ["Viktor Nikulaev <viktor_1611@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
psycopg2-binary = "^2.9.10"
pillow = "^11.0.0"
ipython = "^8.28.0"
black = "^24.10.0"
python-dotenv = "^1.0.1"
djangorestframework = "^3.15.2"
celery = "^5.4.0"
rest-framework-simplejwt = "^0.0.2"
djangorestframework-simplejwt = "^5.3.1"
drf-yasg = "^1.21.8"
django-celery-beat = "^2.7.0"
django-filter = "^24.3"
stripe = "^11.3.0"
redis = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
